# faelight-theme-engine

./: DESIGN.md  IDEAS.md  README.md  RESEARCH_NOTES.md  pyproject.toml  test_colorgram.py  test_colorz.py
faelight_theme/: cli.py  contrast.py  extract.py  palette.py  render.py
